feat(ios): comprehensive localization for Settings, Trust Centre, Export + training polish (v1.17.52)
Training Section:
- Removed back button (now a tab, not pushed view)
- Content already scrollable from v1.17.50

Settings View:
- Localized: Open Settings, Cancel, Clear All buttons

Trust Centre View:
- Localized: Reset All Settings, Cancel, Done, Add buttons

Export View:
- Localized format titles (PDF Report, JSON Data)
- Localized format subtitles
- Localized navigation titles
- Localized Copy/Copied! button states

New Keys (16 languages):
- common.done, common.add, common.open_settings
- common.clear_all, common.reset_all_settings
- export.* keys (12 new keys)

Build: BUILD SUCCEEDED

--- a/iosApp/QRShield/ar.lproj/Localizable.strings
+++ b/iosApp/QRShield/ar.lproj/Localizable.strings
@@ -481,3 +481,23 @@
 "tab.history" = "السجل";
 "tab.training" = "التدريب";
 "tab.settings" = "الإعدادات";
+
+// MARK: - Common Buttons
+"common.done" = "تم";
+"common.add" = "إضافة";
+"common.open_settings" = "فتح الإعدادات";
+"common.clear_all" = "مسح الكل";
+"common.reset_all_settings" = "إعادة تعيين جميع الإعدادات";
+
+// MARK: - Export View
+"export.report_preview" = "معاينة التقرير";
+"export.help_title" = "مساعدة التصدير";
+"export.format.pdf_title" = "تقرير PDF";
+"export.format.pdf_subtitle" = "ملخص قابل للقراءة";
+"export.format.json_title" = "بيانات JSON";
+"export.format.json_subtitle" = "بيانات خام قابلة للقراءة الآلية";
+"export.help" = "مساعدة";
+"export.switch_to" = "التبديل إلى %@";
+"export.copied" = "تم النسخ!";
+"export.copy" = "نسخ";
+"export.report_generation" = "إنشاء التقرير";
