feat: Polish AI shield visualizer, complete Android audit, update app version, add new localized strings, and switch launcher icon to PNG.

--- a/androidApp/src/main/res/values-ar/strings.xml
+++ b/androidApp/src/main/res/values-ar/strings.xml
@@ -595,4 +595,8 @@
     <!-- SandboxWebView -->
     <!-- Common placeholders -->
     <string name="placeholder_domain">example.com</string>
+    
+    <!-- Beat The Bot AI Analysis -->
+    <string name="beat_the_bot_ai_analysis">تحليل الذكاء الاصطناعي</string>
+    <string name="beat_the_bot_signals_detected_fmt">تم اكتشاف %1$d إشارة</string>
 </resources>
