--- a/androidApp/src/main/res/values-th/strings.xml
+++ b/androidApp/src/main/res/values-th/strings.xml
@@ -578,4 +578,8 @@
     <!-- SandboxWebView -->
     <!-- Common placeholders -->
     <string name="placeholder_domain">example.com</string>
+    
+    <!-- Beat The Bot AI Analysis -->
+    <string name="beat_the_bot_ai_analysis">การวิเคราะห์ AI</string>
+    <string name="beat_the_bot_signals_detected_fmt">ตรวจพบ %1$d สัญญาณ</string>
 </resources>
