--- a/androidApp/src/main/res/values-vi/strings.xml
+++ b/androidApp/src/main/res/values-vi/strings.xml
@@ -578,4 +578,8 @@
     <!-- SandboxWebView -->
     <!-- Common placeholders -->
     <string name="placeholder_domain">example.com</string>
+    
+    <!-- Beat The Bot AI Analysis -->
+    <string name="beat_the_bot_ai_analysis">PHÂN TÍCH AI</string>
+    <string name="beat_the_bot_signals_detected_fmt">%1$d tín hiệu được phát hiện</string>
 </resources>
